# urlshortener/models/model_analytics_response.go
@@ -1,6 +1,0 @@
-package models
-
-type AnalyticsResponse struct {
-
-	Data AnalyticsData `json:"data,omitempty"`
-}
