# urlshortener/models/model_analytics_response_all_of.go
@@ -1,6 +1,0 @@
-package models
-
-type AnalyticsResponseAllOf struct {
-
-	Data AnalyticsData `json:"data,omitempty"`
-}
