# urlshortener/models/model_long_url_response.go
@@ -1,6 +1,0 @@
-package models
-
-type LongUrlResponse struct {
-
-	Data LongUrlData `json:"data,omitempty"`
-}
