# urlshortener/models/model_long_url_response_all_of.go
@@ -1,6 +1,0 @@
-package models
-
-type LongUrlResponseAllOf struct {
-
-	Data LongUrlData `json:"data,omitempty"`
-}
