# urlshortener/models/model_short_url_response.go
@@ -1,6 +1,0 @@
-package models
-
-type ShortUrlResponse struct {
-
-	Data ShortUrlData `json:"data,omitempty"`
-}
