# urlshortener/models/model_short_url_response_all_of.go
@@ -1,6 +1,0 @@
-package models
-
-type ShortUrlResponseAllOf struct {
-
-	Data ShortUrlData `json:"data,omitempty"`
-}
